--- a/DownloadAppModal/index.html
+++ b/DownloadAppModal/index.html
@@ -58,11 +58,11 @@
 				position: relative;
 				min-height: 100%;
 				overflow-x: hidden;
-				background-image: url("./Background.png");
+				background-image: url("https://daniels-roth-stan.fr/CodeThisInYourStyle/DownloadAppModal/Background.png");
 				background-size: cover;
 				background-position: 50% 50%;
 				background-repeat: no-repeat;
-				padding-top: 10%;
+				padding-top: 50px;
 			}
 
 			a
@@ -161,11 +161,12 @@
 				Inspired by <a href="https://dribbble.com/shots/6503686-Daily-UI-12-Download-app-Creativeworld" target="_blank">this shot</a><br/>
 				By <a href="https://dribbble.com/shots/6503686-Daily-UI-12-Download-app-Creativeworld" target="_blank">Maxence P. - Olwens</a><br/>
 				Coded by <a href="https://daniels-roth-stan.fr" target="_blank">DANIELS-ROTH Stan</a><br/>
+				Edit in <a href="https://daniels-roth-stan.fr" target="_blank">CodePen</a><br/>
 			</div>
 			<ul class="apps">
 				<li class="app">
 					<a class="link" href="https://play.google.com/store" target="_blank">
-						<img class="platformLogo" src="./google-play-store.svg" alt="Google Play Store Icon">
+						<img class="platformLogo" src="https://daniels-roth-stan.fr/CodeThisInYourStyle/DownloadAppModal/google-play-store.svg" alt="Google Play Store Icon">
 						<div class="CTA">
 							Free download on Google Play Store
 						</div>
@@ -173,7 +174,7 @@
 				</li>
 				<li class="app">
 					<a class="link" href="https://www.apple.com/fr/ios/app-store/" target="_blank">
-						<img class="platformLogo" src="./apple.svg" alt="Apple Logo">
+						<img class="platformLogo" src="https://daniels-roth-stan.fr/CodeThisInYourStyle/DownloadAppModal/apple.svg" alt="Apple Logo">
 						<div class="CTA">
 							Free download on AppStore
 						</div>
