added second project

--- a/DownloadAppModal/index.html
+++ b/DownloadAppModal/index.html
@@ -161,7 +161,7 @@
 				Inspired by <a href="https://dribbble.com/shots/6503686-Daily-UI-12-Download-app-Creativeworld" target="_blank">this shot</a><br/>
 				By <a href="https://dribbble.com/shots/6503686-Daily-UI-12-Download-app-Creativeworld" target="_blank">Maxence P. - Olwens</a><br/>
 				Coded by <a href="https://daniels-roth-stan.fr" target="_blank">DANIELS-ROTH Stan</a><br/>
-				Edit in <a href="https://daniels-roth-stan.fr" target="_blank">CodePen</a><br/>
+				Edit in <a href="https://codepen.io/mrstandu33/pen/pmrPwL" target="_blank">CodePen</a><br/>
 			</div>
 			<ul class="apps">
 				<li class="app">
