fixed project2 title

--- a/UploadFilesModal/index.html
+++ b/UploadFilesModal/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<title>#CTIYS - Download App Modal</title>
+		<title>#CTIYS - Upload Files Modal</title>
 
 		<meta name="description" content="">
 		<meta name="keywords" content="">
