--- a/DownloadAppModal/index.html
+++ b/DownloadAppModal/index.html
@@ -1,41 +1,37 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<title>#CTIYS - Download App Modal</title>
 
-		<meta name="description" content="">
-		<meta name="keywords" content="">
-		<meta name="author" content="">
+		<meta name="description" content=""/>
+		<meta name="keywords" content=""/>
+		<meta name="author" content=""/>
 
-		<meta name="robots" content="index, follow">
-		<meta name="mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="default">
+		<meta name="robots" content="index, follow"/>
+		<meta name="mobile-web-app-capable" content="yes"/>
+		<meta name="apple-mobile-web-app-capable" content="yes"/>
+		<meta name="apple-mobile-web-app-status-bar-style" content="default"/>
 
-		<meta property="fb:page_id" content="">
-		<meta property="og:title" content="">
-		<meta property="og:image" content="">
-		<meta property="og:description" content="">
-		<meta property="og:url" content="">
-		<meta property="og:site_name" content="">
-		<meta property="og:type" content="website">
+		<meta property="fb:page_id" content=""/>
+		<meta property="og:title" content=""/>
+		<meta property="og:image" content=""/>
+		<meta property="og:description" content=""/>
+		<meta property="og:url" content=""/>
+		<meta property="og:site_name" content=""/>
+		<meta property="og:type" content="website"/>
 
-		<meta name="twitter:card" content="summary">
-		<meta name="twitter:url" content="">
-		<meta name="twitter:title" content="">
-		<meta name="twitter:description" content="">
-		<meta name="twitter:image" content="">
-		<meta name="twitter:site" content="">
+		<meta name="twitter:card" content="summary"/>
+		<meta name="twitter:url" content=""/>
+		<meta name="twitter:title" content=""/>
+		<meta name="twitter:description" content=""/>
+		<meta name="twitter:image" content=""/>
+		<meta name="twitter:site" content=""/>
 
 		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-
-		<script>
-
-		</script>
 
 		<style>
 			*
@@ -79,8 +75,6 @@
 				padding: 0;
 			}
 
-
-
 			body>div.container
 			{
 				height: 100vh;
@@ -99,7 +93,6 @@
 				color: #5A5F7C;
 				font-family: 'Roboto', sans-serif;
 				font-weight: 500;
-				width: 300px;
 				padding: 10px;
 			}
 
@@ -120,11 +113,11 @@
 			body>div.container>ul.apps>li.app
 			{
 				background-color: #5A5F7C;
-				border-radius : 5px;
+				border-radius: 5px;
 				margin-top: 20px;
-				-webkit-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
-				-moz-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
-				box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
+				-webkit-box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.75);
+				-moz-box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.75);
+				box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.75);
 			}
 
 			body>div.container>ul.apps>li.app>a.link
@@ -147,7 +140,7 @@
 				height: 100%;
 				width: 100%;
 				background-color: #FFFFFF;
-				border-radius : 5px;
+				border-radius: 5px;
 				color: #5A5F7C;
 				font-family: 'Roboto', sans-serif;
 				font-weight: 500;
