--- a/UploadFilesModal/index.html
+++ b/UploadFilesModal/index.html
@@ -1,38 +1,39 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<title>#CTIYS - Upload Files Modal</title>
 
-		<meta name="description" content="">
-		<meta name="keywords" content="">
-		<meta name="author" content="">
+		<meta name="description" content=""/>
+		<meta name="keywords" content=""/>
+		<meta name="author" content=""/>
 
-		<meta name="robots" content="index, follow">
-		<meta name="mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="default">
+		<meta name="robots" content="index, follow"/>
+		<meta name="mobile-web-app-capable" content="yes"/>
+		<meta name="apple-mobile-web-app-capable" content="yes"/>
+		<meta name="apple-mobile-web-app-status-bar-style" content="default"/>
 
-		<meta property="fb:page_id" content="">
-		<meta property="og:title" content="">
-		<meta property="og:image" content="">
-		<meta property="og:description" content="">
-		<meta property="og:url" content="">
-		<meta property="og:site_name" content="">
-		<meta property="og:type" content="website">
+		<meta property="fb:page_id" content=""/>
+		<meta property="og:title" content=""/>
+		<meta property="og:image" content=""/>
+		<meta property="og:description" content=""/>
+		<meta property="og:url" content=""/>
+		<meta property="og:site_name" content=""/>
+		<meta property="og:type" content="website"/>
 
-		<meta name="twitter:card" content="summary">
-		<meta name="twitter:url" content="">
-		<meta name="twitter:title" content="">
-		<meta name="twitter:description" content="">
-		<meta name="twitter:image" content="">
-		<meta name="twitter:site" content="">
+		<meta name="twitter:card" content="summary"/>
+		<meta name="twitter:url" content=""/>
+		<meta name="twitter:title" content=""/>
+		<meta name="twitter:description" content=""/>
+		<meta name="twitter:image" content=""/>
+		<meta name="twitter:site" content=""/>
 
 		<link href="https://fonts.googleapis.com/css?family=Arimo&display=swap" rel="stylesheet">
-		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+			integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
 		<script>
 			$(document).ready(function()
@@ -145,7 +146,6 @@
 				color: #5A5F7C;
 				font-family: 'Arimo', sans-serif;
 				font-weight: 500;
-				width: 300px;
 				padding: 10px;
 			}
 
@@ -167,15 +167,15 @@
 			body>div.container>ul.uploads>li.file
 			{
 				background-image: linear-gradient(to right, #070735, #0a173b, #142240, #202d43, #2e3846);
-				border-radius : 5px;
+				border-radius: 5px;
 				margin-top: 5px;
 				display: flex;
 				flex-flow: row nowrap;
 				width: 100%;
 				height: 75px;
-				-webkit-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
-				-moz-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
-				box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
+				-webkit-box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.75);
+				-moz-box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.75);
+				box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.75);
 				overflow: hidden;
 				position: relative;
 			}
